# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  02 Apr 2007; Roy Marples <uberlord@gentoo.org>:

    Stop truecrypt, #168691 thanks to Alon Bar-Lev.

  28 Mar 2007; Mike Frysinger <vapier@gentoo.org>:

    Force regen of deptree if it is only 0 bytes #172502 by Zhixu Liu.

  25 Mar 2007; Mike Frysinger <vapier@gentoo.org>:

    Rewrite netmount a bit so that it handles nfs/portmap better and so that it
    uses more net-fs based init.d scripts.  This way, people can just use
    netmount in their init.d script and not worry about random net fs stuff.

    Rewrite modules init.d to drop extended awk and simplify things a bit.

  16 Mar 2007; Mike Frysinger <vapier@gentoo.org>:

    Also delete iceauth/xauth from /tmp in bootmisc #170643 by Pat Double.

  13 Mar 2007; Mike Frysinger <vapier@gentoo.org>:

    Allow people to set TIMEZONE="" to indicate they want to handle timezone
    management themselves.

  09 Mar 2007; Roy Marples <uberlord@gentoo.org>:

    Default svcdir when deleting it, just incase it's unset, #170117.

    Don't call sulogin by absolute path, so splash-utils can intercept it,
    #169949 thanks to Daniel Drake.

  17 Feb 2007; Mike Frysinger <vapier@gentoo.org>:

    Do not bother sleeping in checkroot if RC_FORCE_AUTO is enabled.

  31 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Support RC_BEFORE/AFTER/PROVIDE_$iface in net.lo too, thanks to
    Robin Johnson.

  30 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Support new style wpa_supplicant ctrl_interface directive, #164551.

  29 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Default bootmisc behaviour is now to wipe /tmp completely.

    Fix a few initial mounting problems, thanks to Daniel Drake.

    coldplugged devices that are in the default runlevel now start in the
    boot runlevel.

  26 Jan 2007; Mike Frysinger <vapier@gentoo.org>:

    Clean gpg/wpa tmp files #163807 by Pat Double.
